--- a/click/index.html
+++ b/click/index.html
@@ -1,1 +1,39 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Clickpocalypse</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <!-- Main click button -->
+    <div id="click-area">
+        <button id="main-click">CLICK!</button>
+        <p id="click-count">Clicks: 0</p>
+    </div>
+
+    <!-- Buildings panel -->
+    <div id="buildings-panel">
+        <h2>Buildings</h2>
+        <div id="buildings-list"></div>
+    </div>
+
+    <!-- Upgrades panel -->
+    <div id="upgrades-panel">
+        <h2>Upgrades</h2>
+        <div id="upgrades-list"></div>
+    </div>
+
+    <!-- Achievements panel -->
+    <div id="achievements-panel">
+        <h2>Achievements</h2>
+        <div id="achievements-list"></div>
+    </div>
+
+    <!-- Events / Chaos messages -->
+    <div id="events-panel"></div>
+
+    <script src="script.js"></script>
+</body>
+</html>
 
