--- a/click/index.html
+++ b/click/index.html
@@ -7,10 +7,11 @@
 </head>
 <body>
     <!-- Main click button -->
-    <div id="click-area">
-        <button id="main-click">CLICK!</button>
-        <p id="click-count">Clicks: 0</p>
-    </div>
+<div id="click-area">
+    <img id="black-hole" src="assets/blackhole.png" alt="Mini Black Hole">
+    <p id="click-count">Clicks: 0</p>
+</div>
+
 
     <!-- Buildings panel -->
     <div id="buildings-panel">
